Fix mobile nav spacing again

--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -125,7 +125,7 @@
     }
 
     a {
-      font-size: 36px;
+      font-size: 26px;
 
       &:after {
         margin-top: 5px;
@@ -136,13 +136,14 @@
 
   .overlay-content {
     position: relative;
-    top: 25%;
+    top: 7%;
     width: 100%;
     text-align: center;
     margin-top: 30px;
 
     display: flex;
     justify-content: center;
+
     align-items: center;
     flex-direction: column;
 
